fix: table placeholder icon spacing

--- a/src/theme/_pattern.scss
+++ b/src/theme/_pattern.scss
@@ -49,6 +49,10 @@
     background-color: get-color(n-10);
     border: solid 1px get-color(n-8);
     border-radius: get-size(border-radius-l);
+
+    > aui-icon:first-child {
+      margin-right: get-size(spacing-m);
+    }
   }
 
   .aui-table .aui-table__row + #{$className} {
